Overflow join banner fixed

--- a/src/styles/join-banner.scss
+++ b/src/styles/join-banner.scss
@@ -3,6 +3,7 @@
     position: relative;
     z-index: 2;
     margin-bottom: 20rem;
+    overflow-x: hidden;
 }
 
 .card {
@@ -40,7 +41,7 @@
 }
 
 .first-text {
-    margin-top: 15rem;
+    margin-top: 25vh;
     position: relative;
     z-index: 5;
     color: white;
